# imagingservices

./: .gitignore  README.md  pyproject.toml
.github/workflows/: manual.yml  test.yml
api/: main.py
go/excellent/: main.go  main_test.go
spec/: README.md
src/imagingservices/: __init__.py  ocr.py
templates/: index.html
tests/: test_example.py  test_ocr_service.py
